feat(drivers): 重构并补全 SWM181 BSP 驱动
1. 重构 UART, I2C, SPI, ADC, PWM 驱动以支持多实例。
2. 补全所有驱动的引脚初始化 (PORT_Init) 逻辑。
3. 新增硬件 CAN 驱动。
4. 修复 drv_hwtimer.c 实现并优化 Kconfig/SConscript 配置。
5. 更新 README.md 外设支持列表。
6. 在 main.c 中增加全外设功能测试代码并通过编译。

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,11 +33,9 @@
             "loadFiles": [],
             "configFiles": [
                 "interface/stlink.cfg",
-                "target/cortex_m.cfg"
+                "${workspaceFolder}/.vscode/swm181.cfg"
             ],
-            "openOCDLaunchCommands": [
-                "set CHIPNAME swm181"
-            ],
+            "openOCDLaunchCommands": [],
             "liveWatch": {
                 "enabled": true,
                 "samplesPerSecond": 4
