feat(drivers): 引入物理引脚编号系统并修复 HardFault 漏洞
1. 建立物理引脚 (1-53) 与 MCU GPIO 的映射，简化 Kconfig 引脚配置。
2. 重构 drv_gpio，通过物理编号动态解析端口指针与引脚索引。
3. 彻底修复 UART, I2C, SPI, PWM 驱动中结构体强转导致的 HardFault 漏洞。
4. 全面适配 UART0-3, I2C0-1, SPI0-1, CAN, PWM0-3 的灵活引脚映射。
5. 清理 Kconfig 和 SConscript 中的冗余项，同步更新 main.c 测试代码。

--- a/drivers/SConscript
+++ b/drivers/SConscript
@@ -15,30 +15,15 @@ if GetDepend(['RT_USING_PIN']):
 if GetDepend('BSP_USING_ADC'):
     src += ['drv_adc.c']
 
-if GetDepend('BSP_USING_CPUTIME'):
-    src += ['drv_cputime.c']
-
-if GetDepend('BSP_USING_EMAC'):
-    src += ['drv_emac.c']
-
-if GetDepend('BSP_USING_HWTIMER0') or GetDepend('BSP_USING_HWTIMER1'):
-    # src += ['drv_hwtimer.c']
-    pass
-
 if GetDepend('BSP_USING_I2C0') or GetDepend('BSP_USING_I2C1'):
     src += ['drv_i2c.c']
 
-if GetDepend('PKG_USING_GUIENGINE'):
-    src += ['drv_lcd.c']
-
-if GetDepend('BSP_USING_PWM0')or GetDepend('BSP_USING_PWM1'):
+if GetDepend('BSP_USING_PWM0') or GetDepend('BSP_USING_PWM1') or \
+   GetDepend('BSP_USING_PWM2') or GetDepend('BSP_USING_PWM3'):
     src += ['drv_pwm.c']
 
 if GetDepend('BSP_USING_RTC'):
     src += ['drv_rtc.c']
-
-if GetDepend('BSP_USING_SDIO'):
-    src += ['drv_sdio.c']
 
 if GetDepend('BSP_USING_SPI0') or GetDepend('BSP_USING_SPI1'):
     src += ['drv_spi.c']
@@ -48,9 +33,6 @@ if GetDepend('BSP_USING_WDT'):
 
 if GetDepend('BSP_USING_CAN'):
     src += ['drv_can.c']
-
-if GetDepend(['BSP_USING_WIFI']):
-    src += ['drv_wlan.c']
 
 group = DefineGroup('Drivers', src, depend = [''], CPPPATH = CPPPATH)
 
