--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -3,40 +3,66 @@ menu "Hardware Drivers Config"
     menu "On-chip Peripheral Drivers"
 
         config BSP_USING_GPIO
-            bool "Enable GPIOB"
+            bool "Enable GPIO"
             select RT_USING_PIN
             default y
 
         menu "UART Drivers"
             config BSP_USING_UART0
-                bool "Enable UART0 (PA0/1,RX/TX)"
+                bool "Enable UART0"
                 select RT_USING_SERIAL
                 default y
+            if BSP_USING_UART0
+                config BSP_UART0_RX_PIN
+                    int "UART0 RX Pin (e.g. 0 for PA0)"
+                    default 0
+                config BSP_UART0_TX_PIN
+                    int "UART0 TX Pin (e.g. 1 for PA1)"
+                    default 1
+            endif
 
             config BSP_USING_UART1
                 bool "Enable UART1"
                 select RT_USING_SERIAL
                 default n
+            if BSP_USING_UART1
+                config BSP_UART1_RX_PIN
+                    int "UART1 RX Pin (e.g. 10 for PA10)"
+                    default 10
+                config BSP_UART1_TX_PIN
+                    int "UART1 TX Pin (e.g. 11 for PA11)"
+                    default 11
+            endif
 
             config BSP_USING_UART2
                 bool "Enable UART2"
                 select RT_USING_SERIAL
                 default n
+            if BSP_USING_UART2
+                config BSP_UART2_RX_PIN
+                    int "UART2 RX Pin (e.g. 26 for PB10)"
+                    default 26
+                config BSP_UART2_TX_PIN
+                    int "UART2 TX Pin (e.g. 27 for PB11)"
+                    default 27
+            endif
 
             config BSP_USING_UART3
                 bool "Enable UART3"
                 select RT_USING_SERIAL
                 default n
+            if BSP_USING_UART3
+                config BSP_UART3_RX_PIN
+                    int "UART3 RX Pin (e.g. 42 for PC10)"
+                    default 42
+                config BSP_UART3_TX_PIN
+                    int "UART3 TX Pin (e.g. 43 for PC11)"
+                    default 43
+            endif
         endmenu
 
-        config BSP_USING_LCD
-            bool "Enable LCD"
-            select BSP_USING_LTDC
-            select BSP_USING_SDRAM
-            default n
-
         config BSP_USING_RTC
-            bool "Enable RTC"
+            bool "Enable RTC (Software)"
             select RT_USING_RTC
             default n
 
@@ -50,98 +76,134 @@ menu "Hardware Drivers Config"
             select RT_USING_ADC
             default n
 
-        config BSP_USING_CPUTIME
-            bool "Enable CPUTIME"
-            select RT_USING_CPUTIME
-            default n
-
-        config BSP_USING_WIFI
-            bool "Enable WIFI"
-            select RT_USING_WIFI
-            default n
-
-        config BSP_USING_EMAC
-            bool "Enable EMAC"
-            select RT_USING_LWIP
-            default n
-
-        menu "HWtimer Drivers"
-            config BSP_USING_HWTIMER0
-                bool "Using timer0"
-                select RT_USING_HWTIMER 
-                default n
-
-            config BSP_USING_HWTIMER1
-                bool "Using timer1"
-                select RT_USING_HWTIMER 
-                default n
-
-            config BSP_USING_HWTIMER2
-                bool "Using timer2"
-                select RT_USING_HWTIMER 
-                default n
-
-            config BSP_USING_HWTIMER3
-                bool "Using timer3"
-                select RT_USING_HWTIMER 
-                default n
-        endmenu
-
-        menu "I2C Drivers"
-            config BSP_USING_I2C0
-                bool "Enable I2C0 BUS (software simulation)"
-                select RT_USING_I2C
-                select RT_USING_PIN
-                select RT_USING_I2C_BITOPS
-                default n
-
-                if BSP_USING_I2C0
-                     config BSP_I2C0_SCL_PIN  
-                        int "i2c0 SCL Pin number"
-                        default 98
-
-                    config BSP_I2C0_SDA_PIN
-                        int "i2c0 SDA Pin number"
-                        default 99
-                endif
-                
-            config BSP_USING_I2C1
-                bool "Enable I2C1 BUS (PB10/11,SCL/SDA)"
-                select RT_USING_I2C
-                default n
-        endmenu
-
-        menu "PWM Drivers"
-            config BSP_USING_PWM0
-                bool "Using PWM0 (PA8/9,CH1/CH2)"
-                select RT_USING_PWM
-                default n
-
-            config BSP_USING_PWM1
-                bool "Using PWM1 (PB6/7,CH1/CH2))"
-                select RT_USING_PWM
-                default n
-        endmenu
-
         config BSP_USING_CAN
             bool "Enable CAN"
             select RT_USING_CAN
             default n
+        if BSP_USING_CAN
+            config BSP_CAN_RX_PIN
+                int "CAN RX Pin"
+                default 12
+            config BSP_CAN_TX_PIN
+                int "CAN TX Pin"
+                default 13
+        endif
+
+        menu "I2C Drivers"
+            config BSP_USING_I2C0
+                bool "Enable I2C0 BUS"
+                select RT_USING_I2C
+                default n
+            if BSP_USING_I2C0
+                config BSP_I2C0_SCL_PIN
+                    int "I2C0 SCL Pin"
+                    default 12
+                config BSP_I2C0_SDA_PIN
+                    int "I2C0 SDA Pin"
+                    default 13
+            endif
+
+            config BSP_USING_I2C1
+                bool "Enable I2C1 BUS"
+                select RT_USING_I2C
+                default n
+            if BSP_USING_I2C1
+                config BSP_I2C1_SCL_PIN
+                    int "I2C1 SCL Pin"
+                    default 26
+                config BSP_I2C1_SDA_PIN
+                    int "I2C1 SDA Pin"
+                    default 27
+            endif
+        endmenu
+
+        menu "PWM Drivers"
+            config BSP_USING_PWM0
+                bool "Using PWM0"
+                select RT_USING_PWM
+                default n
+            if BSP_USING_PWM0
+                config BSP_PWM0_CH1_PIN
+                    int "PWM0 Channel A Pin"
+                    default 8
+                config BSP_PWM0_CH2_PIN
+                    int "PWM0 Channel B Pin"
+                    default 9
+            endif
+
+            config BSP_USING_PWM1
+                bool "Using PWM1"
+                select RT_USING_PWM
+                default n
+            if BSP_USING_PWM1
+                config BSP_PWM1_CH1_PIN
+                    int "PWM1 Channel A Pin"
+                    default 22
+                config BSP_PWM1_CH2_PIN
+                    int "PWM1 Channel B Pin"
+                    default 23
+            endif
+
+            config BSP_USING_PWM2
+                bool "Using PWM2"
+                select RT_USING_PWM
+                default n
+            if BSP_USING_PWM2
+                config BSP_PWM2_CH1_PIN
+                    int "PWM2 Channel A Pin"
+                    default 12
+                config BSP_PWM2_CH2_PIN
+                    int "PWM2 Channel B Pin"
+                    default 13
+            endif
+
+            config BSP_USING_PWM3
+                bool "Using PWM3"
+                select RT_USING_PWM
+                default n
+            if BSP_USING_PWM3
+                config BSP_PWM3_CH1_PIN
+                    int "PWM3 Channel A Pin"
+                    default 30
+                config BSP_PWM3_CH2_PIN
+                    int "PWM3 Channel B Pin"
+                    default 31
+            endif
+        endmenu
 
         menu "SPI Drivers"
             config BSP_USING_SPI0
-                bool "Enable SPI0 BUS (PC4/5/6,SCLK/MOSI/MISO)"
+                bool "Enable SPI0 BUS"
                 select RT_USING_SPI
-                select RT_USING_PIN
                 default n 
+            if BSP_USING_SPI0
+                config BSP_SPI0_MISO_PIN
+                    int "SPI0 MISO Pin"
+                    default 9
+                config BSP_SPI0_MOSI_PIN
+                    int "SPI0 MOSI Pin"
+                    default 10
+                config BSP_SPI0_SCLK_PIN
+                    int "SPI0 SCLK Pin"
+                    default 11
+            endif
 
             config BSP_USING_SPI1
-                bool "Enable SPI1 BUS (PC5/2/3,SCLK/MOSI/MISO)"
+                bool "Enable SPI1 BUS"
                 select RT_USING_SPI
-                select RT_USING_PIN
                 default n
+            if BSP_USING_SPI1
+                config BSP_SPI1_MISO_PIN
+                    int "SPI1 MISO Pin"
+                    default 37
+                config BSP_SPI1_MOSI_PIN
+                    int "SPI1 MOSI Pin"
+                    default 38
+                config BSP_SPI1_SCLK_PIN
+                    int "SPI1 SCLK Pin"
+                    default 39
+            endif
         endmenu
-
 
     endmenu
 
