--- a/.config
+++ b/.config
@@ -235,28 +235,17 @@ CONFIG_RT_USING_SERIAL_V1=y
 # CONFIG_RT_SERIAL_USING_DMA is not set
 CONFIG_RT_SERIAL_RB_BUFSZ=64
 # CONFIG_RT_USING_SERIAL_BYPASS is not set
-CONFIG_RT_USING_CAN=y
-# CONFIG_RT_CAN_USING_HDR is not set
-# CONFIG_RT_CAN_USING_CANFD is not set
-CONFIG_RT_CANMSG_BOX_SZ=16
-CONFIG_RT_CANSND_BOX_NUM=1
-CONFIG_RT_CANSND_MSG_TIMEOUT=100
-CONFIG_RT_CAN_NB_TX_FIFO_SIZE=256
-# CONFIG_RT_CAN_MALLOC_NB_TX_BUFFER is not set
+# CONFIG_RT_USING_CAN is not set
 # CONFIG_RT_USING_CLOCK_TIME is not set
-CONFIG_RT_USING_I2C=y
-# CONFIG_RT_I2C_DEBUG is not set
-CONFIG_RT_USING_I2C_BITOPS=y
-# CONFIG_RT_I2C_BITOPS_DEBUG is not set
-# CONFIG_RT_USING_SOFT_I2C is not set
+# CONFIG_RT_USING_I2C is not set
 # CONFIG_RT_USING_PHY is not set
 # CONFIG_RT_USING_PHY_V2 is not set
-CONFIG_RT_USING_ADC=y
+# CONFIG_RT_USING_ADC is not set
 # CONFIG_RT_USING_DAC is not set
 # CONFIG_RT_USING_NULL is not set
 # CONFIG_RT_USING_ZERO is not set
 # CONFIG_RT_USING_RANDOM is not set
-CONFIG_RT_USING_PWM=y
+# CONFIG_RT_USING_PWM is not set
 # CONFIG_RT_USING_PULSE_ENCODER is not set
 # CONFIG_RT_USING_INPUT_CAPTURE is not set
 # CONFIG_RT_USING_MTD_NOR is not set
@@ -264,15 +253,7 @@ CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_PM is not set
 # CONFIG_RT_USING_RTC is not set
 # CONFIG_RT_USING_SDIO is not set
-CONFIG_RT_USING_SPI=y
-CONFIG_RT_USING_SPI_ISR=y
-# CONFIG_RT_USING_SPI_BITOPS is not set
-# CONFIG_RT_USING_SOFT_SPI is not set
-# CONFIG_RT_USING_QSPI is not set
-# CONFIG_RT_USING_SPI_MSD is not set
-# CONFIG_RT_USING_SFUD is not set
-# CONFIG_RT_USING_ENC28J60 is not set
-# CONFIG_RT_USING_SPI_WIFI is not set
+# CONFIG_RT_USING_SPI is not set
 # CONFIG_RT_USING_WDT is not set
 # CONFIG_RT_USING_AUDIO is not set
 # CONFIG_RT_USING_SENSOR is not set
@@ -1447,8 +1428,8 @@ CONFIG_BSP_USING_GPIO=y
 # UART Drivers
 #
 CONFIG_BSP_USING_UART0=y
-CONFIG_BSP_UART0_RX_PIN=0
-CONFIG_BSP_UART0_TX_PIN=1
+CONFIG_BSP_UART0_RX_PIN=30
+CONFIG_BSP_UART0_TX_PIN=31
 # CONFIG_BSP_USING_UART1 is not set
 # CONFIG_BSP_USING_UART2 is not set
 # CONFIG_BSP_USING_UART3 is not set
@@ -1456,26 +1437,20 @@ CONFIG_BSP_UART0_TX_PIN=1
 
 # CONFIG_BSP_USING_RTC is not set
 # CONFIG_BSP_USING_WDT is not set
-CONFIG_BSP_USING_ADC=y
-CONFIG_BSP_USING_CAN=y
-CONFIG_BSP_CAN_RX_PIN=12
-CONFIG_BSP_CAN_TX_PIN=13
+# CONFIG_BSP_USING_ADC is not set
+# CONFIG_BSP_USING_CAN is not set
 
 #
 # I2C Drivers
 #
-CONFIG_BSP_USING_I2C0=y
-CONFIG_BSP_I2C0_SCL_PIN=12
-CONFIG_BSP_I2C0_SDA_PIN=13
+# CONFIG_BSP_USING_I2C0 is not set
 # CONFIG_BSP_USING_I2C1 is not set
 # end of I2C Drivers
 
 #
 # PWM Drivers
 #
-CONFIG_BSP_USING_PWM0=y
-CONFIG_BSP_PWM0_CH1_PIN=8
-CONFIG_BSP_PWM0_CH2_PIN=9
+# CONFIG_BSP_USING_PWM0 is not set
 # CONFIG_BSP_USING_PWM1 is not set
 # CONFIG_BSP_USING_PWM2 is not set
 # CONFIG_BSP_USING_PWM3 is not set
@@ -1484,10 +1459,7 @@ CONFIG_BSP_PWM0_CH2_PIN=9
 #
 # SPI Drivers
 #
-CONFIG_BSP_USING_SPI0=y
-CONFIG_BSP_SPI0_MISO_PIN=9
-CONFIG_BSP_SPI0_MOSI_PIN=10
-CONFIG_BSP_SPI0_SCLK_PIN=11
+# CONFIG_BSP_USING_SPI0 is not set
 # CONFIG_BSP_USING_SPI1 is not set
 # end of SPI Drivers
 # end of On-chip Peripheral Drivers
