--- a/.config
+++ b/.config
@@ -1295,9 +1295,8 @@ CONFIG_BSP_PWM0_CH2_PIN=22
 # SPI Drivers
 #
 CONFIG_BSP_USING_SPI0=y
-CONFIG_BSP_SPI0_MISO_PIN=22
-CONFIG_BSP_SPI0_MOSI_PIN=28
-CONFIG_BSP_SPI0_SCLK_PIN=29
+CONFIG_BSP_SPI0_PIN_GRP_A=y
+# CONFIG_BSP_SPI0_PIN_GRP_B is not set
 # CONFIG_BSP_USING_SPI1 is not set
 
 #
